FieldTypeLookup to support dynamic runtime fields (#73519)
We recently streamlined support for dynamic field lookups in FieldTypeLookup. That is now used by the flattened field mapper. We would also like to use it for runtime fields, hence this commit adds support for dynamic runtime fields.

This will be useful to support emitting multiple fields from a single runtime field script, as the sub-fields will be dynamically emitted.